--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -13,8 +13,12 @@ $green-transparent:      #008036;
 $blue:                   #4272b8;
 $blue-transparent:       #07449F;
 
-$purple:                 #433399;
+$purple:                 #50397F;
 $dark-purple:            #47356c;
 
 $light-red:              #ff6052; 
 $dark-red:               #d75145;
+
+
+
+$padding-section:        80px 0 140px 0;
